// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`read csv should get X and y 1`] = `
Object {
  "fields": Array [
    Object {
      "config": Object {},
      "labels": undefined,
      "name": "Field 1",
      "type": Object {
        "value": "string",
      },
      "values": Array [
        "",
        "2",
        "5",
        "",
      ],
    },
    Object {
      "config": Object {},
      "labels": undefined,
      "name": "Field 2",
      "type": Object {
        "value": "number",
      },
      "values": Array [
        1,
        3,
        6,
        NaN,
      ],
    },
    Object {
      "config": Object {},
      "labels": undefined,
      "name": "Field 3",
      "type": Object {
        "value": "number",
      },
      "values": Array [
        null,
        4,
        undefined,
        NaN,
      ],
    },
    Object {
      "config": Object {},
      "labels": undefined,
      "name": "Field 4",
      "type": Object {
        "value": "number",
      },
      "values": Array [
        null,
        null,
        null,
        7,
      ],
    },
  ],
  "meta": undefined,
  "name": undefined,
  "refId": undefined,
}
`;

exports[`read csv should read csv from local file system 1`] = `
Object {
  "fields": Array [
    Object {
      "config": Object {},
      "labels": undefined,
      "name": "a",
      "type": Object {
        "value": "number",
      },
      "values": Array [
        10,
        40,
      ],
    },
    Object {
      "config": Object {},
      "labels": undefined,
      "name": "b",
      "type": Object {
        "value": "number",
      },
      "values": Array [
        20,
        50,
      ],
    },
    Object {
      "config": Object {},
      "labels": undefined,
      "name": "c",
      "type": Object {
        "value": "number",
      },
      "values": Array [
        30,
        60,
      ],
    },
  ],
  "meta": undefined,
  "name": undefined,
  "refId": undefined,
}
`;

exports[`read csv should read csv with headers 1`] = `
Object {
  "fields": Array [
    Object {
      "config": Object {
        "unit": "ms",
      },
      "labels": undefined,
      "name": "a",
      "type": Object {
        "value": "number",
      },
      "values": Array [
        10,
        40,
        40,
        40,
      ],
    },
    Object {
      "config": Object {
        "unit": "lengthm",
      },
      "labels": undefined,
      "name": "b",
      "type": Object {
        "value": "number",
      },
      "values": Array [
        20,
        50,
        500,
        50,
      ],
    },
    Object {
      "config": Object {
        "unit": "s",
      },
      "labels": undefined,
      "name": "c",
      "type": Object {
        "value": "boolean",
      },
      "values": Array [
        true,
        false,
        false,
        true,
      ],
    },
  ],
  "meta": undefined,
  "name": undefined,
  "refId": undefined,
}
`;
